--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "rollup-plugin-ko-component",
   "version": "0.0.1",
   "description": "Roll knockout component.",
-  "main": "index.js",
+  "main": "dest/rollup-plugin-ko-component.cjs.js",
+  "jsnext:main": "dest/rollup-plugin-ko-component.es.js",
   "scripts": {
-    "test": "npm run test"
+    "prepublish": "npm run test",
+    "pretest": "npm run build",
+    "test": "ava test/*.js -s",
+    "build": "node build/build.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +23,17 @@
   "bugs": {
     "url": "https://github.com/differui/rollup-plugin-ko-component/issues"
   },
-  "homepage": "https://github.com/differui/rollup-plugin-ko-component#readme"
+  "homepage": "https://github.com/differui/rollup-plugin-ko-component#readme",
+  "peerDependencies": {
+    "rollup": "^0.34.11"
+  },
+  "dependencies": {
+    "rollup-pluginutils": "^1.3.1"
+  },
+  "devDependencies": {
+    "ava": "^0.16.0",
+    "babel-preset-es2015-rollup": "^1.2.0",
+    "babelrc-rollup": "^3.0.0",
+    "rollup-plugin-babel": "^2.4.0"
+  }
 }
