--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rollup-plugin-ko-component",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Roll knockout component.",
   "main": "dest/rollup-plugin-ko-component.cjs.js",
   "jsnext:main": "dest/rollup-plugin-ko-component.es.js",
@@ -24,9 +24,6 @@
     "url": "https://github.com/differui/rollup-plugin-ko-component/issues"
   },
   "homepage": "https://github.com/differui/rollup-plugin-ko-component#readme",
-  "peerDependencies": {
-    "rollup": "^0.34.11"
-  },
   "dependencies": {
     "rollup-pluginutils": "^1.3.1",
     "babel-plugin-ko-component": "0.0.2"
@@ -35,6 +32,7 @@
     "ava": "^0.16.0",
     "babel-core": "^6.17.0",
     "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2015-rollup": "^1.2.0",
     "babelrc-rollup": "^3.0.0",
     "rollup": "^0.36.3",
     "rollup-plugin-babel": "^2.4.0"
