--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "homepage": "https://github.com/differui/rollup-plugin-ko-component#readme",
   "dependencies": {
-    "rollup-pluginutils": "^1.3.1",
-    "babel-plugin-ko-component": "0.0.2"
+    "babel-plugin-ko-component": "0.0.2",
+    "lru-fast": "^0.1.0",
+    "rollup-pluginutils": "^1.3.1"
   },
   "devDependencies": {
     "ava": "^0.16.0",
