--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "rollup-plugin-ko-component",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Roll knockout component.",
-  "main": "dest/rollup-plugin-ko-component.cjs.js",
-  "jsnext:main": "dest/rollup-plugin-ko-component.es.js",
+  "main": "dest/rollup-plugin-ko-component.js",
   "scripts": {
     "prepublish": "npm run test",
     "pretest": "npm run build",
@@ -25,17 +24,14 @@
   },
   "homepage": "https://github.com/differui/rollup-plugin-ko-component#readme",
   "dependencies": {
+    "babel-core": "^6.17.0",
     "babel-plugin-ko-component": "0.0.2",
     "lru-fast": "^0.1.0",
     "rollup-pluginutils": "^1.3.1"
   },
   "devDependencies": {
     "ava": "^0.16.0",
-    "babel-core": "^6.17.0",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-es2015-rollup": "^1.2.0",
-    "babelrc-rollup": "^3.0.0",
     "rollup": "^0.36.3",
-    "rollup-plugin-babel": "^2.4.0"
+    "rollup-plugin-buble": "^0.14.0"
   }
 }
